--- a/web/PlannerResults.xhtml
+++ b/web/PlannerResults.xhtml
@@ -26,7 +26,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
                     <tr>
                         <th align="left">
-                            <p:commandButton value="Go Back" ajax="false" styleClass="resultsButton" action="Planner?faces-redirect=true"
+                            <p:commandButton value="Go Back" ajax="false" styleClass="resultsButton" action="#{userEventsController.backButtonListener()}"
                                              />
                         </th>
                         <th align="center">
@@ -100,11 +100,11 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
                             </td>
                             <td align="left" class="val">
-                                <h:outputText value="Avg. Precip: "/>
+                                <h:outputText value="Avg. Feels Like: "/>
 
                             </td>
                             <td align="left" class="val" style="font-weight: bold;">
-                                <h:outputText value="#{(searchedWeatherController.avgPrecipChance * 100).intValue()}%"/> 
+                                <h:outputText value="#{(searchedWeatherController.avgFeelsLike).intValue()}°F"/> 
 
                             </td>
                         </tr>
