--- a/web/WeatherForecastResults.xhtml
+++ b/web/WeatherForecastResults.xhtml
@@ -167,11 +167,11 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
                             </td>
                             <td align="left" class="val">
-                                <h:outputText value="Avg. Precip: "/>
+                                <h:outputText value="Avg. Feels Like: "/>
 
                             </td>
                             <td align="left" class="val" style="font-weight: bold;">
-                                <h:outputText value="#{(searchedWeatherController.avgPrecipChance * 100).intValue()}%"/> 
+                                <h:outputText value="#{(searchedWeatherController.avgFeelsLike).intValue()}°F"/> 
 
                             </td>
                         </tr>
