--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,7 +13,6 @@ Copyright © 2017 Andy Sin. All rights reserved.
     <!-- This page is constructed based on the siteTemplate -->
     <ui:composition template="/template/siteTemplate.xhtml" >
 
-
         <ui:define name="editableContent" >
 
             <div id="topMain">
@@ -29,7 +28,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 <br></br><br></br>
 
                 <p:button styleClass="index_signup" outcome="CheckWeather" value="TRY IT NOW" 
-                          onclick="#{searchedWeatherController.clearSearchFields()}"/>
+                          />
 
                 <br></br><br></br>
 
@@ -56,13 +55,13 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 <ul style="text-align: left; column-count: 2; column-gap: 35px; padding-left: 300px; width: auto">
                     <li type="circle">Personalized Activity Calendar</li>
                     <br></br>
-                    <li type="circle">Multiday Event Forecast</li>
+                    <li type="circle">Multi-Day Event Forecast</li>
                     <br></br>
                     <li type="circle">Real-Time Severe Weather Alerts</li>
                     <br></br>
-                    <li type="circle">Minute-By-Minute Forecast Accuracy</li>
+                    <li type="circle">Easy to Use Interface</li>
                     <br></br>
-                    <li type="circle">Email Reminder Notifications</li>
+                    <li type="circle">Track Recurring Events</li>
                     <br></br>
                     <li type="circle">And Much More!</li>
                 </ul>
