--- a/web/DeleteAccount.xhtml
+++ b/web/DeleteAccount.xhtml
@@ -23,6 +23,9 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
             <div align="center" style="width:500px; background-color: #FEFEFE; margin:0 auto;">
                 <h:form id="ConfirmPasswordForm">
+                    <br/>
+                    <h:outputLabel value="#{accountManager.statusMessage}" style="errorMessages" />
+                    <br/>
                     <f:event listener="#{accountManager.validateUserPassword}" type="postValidate"/>
                     <br/>
                     <table cellspacing="10">
@@ -49,14 +52,13 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         </tr>
                     </table>
                     <br/>
-                    <p:commandButton id="delete" value="Delete" icon="ui-icon-trash" class="login"
+                    <p:commandButton id="delete" value="Delete" class="login"
                                      action="#{accountManager.deleteAccount()}" ajax="false" >
                     </p:commandButton>
 
                     <br/>
                     <br/>
                     <p:messages id="msgs" showIcon="false" style="errorMessages" />
-                    <h:outputLabel value="#{accountManager.statusMessage}" style="errorMessages" />
                 </h:form>
             </div>
             <br /><br />
