--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,6 @@ Copyright © 2017 Andy Sin. All rights reserved.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
@@ -34,6 +33,8 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
                 <img src="resources/images/divider.png" width="600px" height="auto"/>
 
+                    <!-- Display different pages based on whether user is signed in -->
+                
                 <br></br>
                 <c:if test="#{accountManager.isLoggedIn() == true}">
 
