--- a/web/ForgotPassword.xhtml
+++ b/web/ForgotPassword.xhtml
@@ -15,11 +15,13 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
     <!-- This page is constructed based on the siteTemplate -->
     <ui:composition template="/template/siteTemplate.xhtml">
 
-        <!-- Create the content for this page below -->
+        <!-- Allows the user to reset their password -->
         <ui:define name="editableContent">
             <div align="center"> <index_header>Reset Password</index_header></div>
             <br></br>
 
+                <!-- Submit username to reset password -->
+            
             <div align="center" style="width:500px; background-color: #FEFEFE; margin:0 auto;">
                 <h:form>
                     <br/>
