--- a/web/Planner.xhtml
+++ b/web/Planner.xhtml
@@ -19,6 +19,8 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
         <ui:define name="editableContent">
             <p:growl id="growl" life="7000"/>
 
+                <!-- Monthly calendar -->
+            
             <h:form id="PlannerDataForm">
                 <h:panelGrid columns="1" columnClasses="weatherResults">
                     <p:schedule id="monthCal" value="#{scheduleView.eventModel}" styleClass="monthCal" draggable="false"
