--- a/web/CreateEvent.xhtml
+++ b/web/CreateEvent.xhtml
@@ -18,6 +18,10 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
             <script src="resources/js/jquery.geocomplete.js" type="text/javascript"></script>
 
+            <!-- Triggers the geocomplete function, which is used to get lat and long from an address  -->
+            <!-- The geocomplete feature is tagged onto the input with id geocomplete -->
+            <!-- The geocomplete feature is fixed to the popup dialog rather than the background -->
+
             <script>
                 $(document).ready(function () {
                     var pacContainerInitialized = false;
@@ -40,6 +44,8 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                 });
             </script>
 
+            <!-- Popup event dialog -->
+
             <div id="testing" align="center" style="width:100%; background-color: #FEFEFE; margin:0 auto;">
                 <h:form prependId="false">
                     <br/>
@@ -57,6 +63,9 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         <tr>
                             <td><index_regular>Location:</index_regular></td>
                         </tr>
+
+                        <!-- Uses the Google Geocoding api to suggest locations based on input -->
+
                         <tr>
                             <td align="left">
                                 <p:inputText id="geocomplete" style="font-family: Lato; width:325px; box-shadow: none;" required="true">
@@ -67,6 +76,9 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         <tr>
                             <td><index_regular id="startTime">Event Start:</index_regular></td>
                         </tr>
+
+                        <!-- Event start time -->
+
                         <tr>
                             <td align="left">
                                 <p:calendar id="startTime" value="#{searchedWeatherController.eventStartTime}" 
@@ -76,6 +88,9 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         <tr>
                             <td><index_regular id="endTime">Event End:</index_regular></td>
                         </tr>
+
+                        <!-- Event end time -->
+
                         <tr>
 
                             <td align="left">
@@ -86,6 +101,9 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         <tr>
                             <td><index_regular id="endTime">Recurring:</index_regular></td>
                         </tr>
+
+                        <!-- Whether the event recurs -->
+
                         <tr>
                             <td align="left">
                                 <h:selectOneMenu id="recurrence" value="#{searchedWeatherController.recurring}" style="font-family: Lato; width:335px; box-shadow: none; font-size: 20px"
@@ -113,6 +131,9 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                             </td>
                         </tr>
                     </table>
+
+                    <!-- Div is populated by the geocomplete method -->
+
                     <div class="latlng" style="display:none;">
                         <h:inputText id="searchQueryFieldLat" class="lat"
                                      value="#{searchedWeatherController.searchLatitude}">
