--- a/web/SignIn.xhtml
+++ b/web/SignIn.xhtml
@@ -25,6 +25,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                 <p:messages id="msgs" showIcon="false"/>
                 <h:outputLabel id="form-error-message" class="errorMessages" value="#{loginManager.errorMessage}"/>
 
+                <!-- Form is used to Sign In to the User model of the application -->
                 <h:form>
                     <br/>
                     <table cellspacing="10">
