One Last Commit!

--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -43,8 +43,8 @@ Copyright © 2017 Osman Balci. All rights reserved.
                     function showPosition(position) {
                         //lat.value = position.coords.latitude;
                         //lng.value = position.coords.longitude;
-                        lat.value = position.coords.latitude;
-                        lng.value = position.coords.longitude;
+                        lat.value = 35.3848841;
+                        lng.value = -77.99276509;
                     }
 
                     window.onload = getLocation();
