Fixed back button plus minor bug fix

--- a/web/WeatherForecastResults.xhtml
+++ b/web/WeatherForecastResults.xhtml
@@ -26,7 +26,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
                     <tr>
                         <th align="left">
-                            <p:commandButton value="Go Back" ajax="false" styleClass="resultsButton" action="CheckWeather?faces-redirect=true"
+                            <p:commandButton value="Go Back" ajax="false" styleClass="resultsButton" immediate="true" action="CheckWeather?faces-redirect"
                                              />
                         </th>
                         <th align="center">
